--- a/.gitignore
+++ b/.gitignore
@@ -37,14 +37,14 @@ chrome-profiler-events*.json
 .history/*
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
+#/.sass-cache
+#/connect.lock
+#/coverage
+#/libpeerconnection.log
+#npm-debug.log
+#yarn-error.log
+#testem.log
+#/typings
 
 # System Files
 .DS_Store
